# surql-definition-macros

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
src/: field.rs  lib.rs  permission.rs  table.rs  type_conv.rs
surql-definition/: Cargo.toml  README.md
surql-definition-core/: Cargo.toml  README.md
surql-definition-core/src/: lib.rs
surql-definition-macros/: Cargo.toml  README.md
surql-definition-macros/src/: field.rs  lib.rs  permission.rs  table.rs  type_conv.rs
surql-definition-macros/tests/: surql_definition.rs
surql-definition/src/: lib.rs
tests/: surql_definition.rs
