[package]
name = "surql-definition-core"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A Rust procedural macro for generating SurrealDB table and field definitions."
homepage = "https://github.com/kochmaxence/surql-definition-macros"
repository = "https://github.com/kochmaxence/surql-definition-macros"
readme = "README.md"
keywords = ["surrealdb", "surreal", "database", "derive", "schema"]

[dependencies]
