[package]
name = "surql-definition-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Rust procedural macro for generating SurrealDB table and field definitions."
homepage = "https://github.com/kochmaxence/surql-definition-macros"
repository = "https://github.com/kochmaxence/surql-definition-macros"
readme = "README.md"
keywords = ["surrealdb", "surreal", "database", "derive", "schema"]


[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["full"] }
surrealdb-core = { git = "https://github.com/surrealdb/surrealdb", rev = "b9f02d1", optional = true }
surql-definition-core = { path = "../surql-definition-core" }

[lib]
proc-macro = true

[features]
default = []
runtime_query_validation = ["dep:surrealdb-core"]
compile_query_validation = ["dep:surrealdb-core"]